# Convertly

./: LICENSE  README.md  index.html  package-lock.json  package.json  push_payload.json  test-clicks.js  vite.config.ts
benchmark/: run.sh
docs/: code-audit-full.md  code-audit.md  crash-investigation.md  design-review.md  format-expansion-plan.md  full-stack-audit-verification-report.md  full-stack-audit.md  performance-optimization.md
public/: logo.avif
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs  utils.rs
src-tauri/src/commands/: convert.rs  files.rs  mod.rs
src-tauri/src/converter/: document.rs  heic.rs  image.rs  jxl.rs  media.rs  mod.rs  raw.rs  svg.rs
src-tauri/src/metadata/: image.rs
src-tauri/src/types/: format.rs
src/components/: ErrorBoundary.tsx
src/components/convert/: VisualFormatSelector.tsx
src/components/history/: HistoryPanel.tsx
src/components/layout/: Sidebar.tsx  SplitPane.tsx  StatusBar.tsx  TitleBar.tsx
src/components/queue/: FormatSelectorPopover.tsx  QueueItem.tsx
src/components/settings/: FormatSelect.tsx  QualitySlider.tsx  SettingsPanel.tsx
src/hooks/: useConversion.ts  useFileDrop.ts
src/lib/: ipc.ts
src/stores/: appStore.ts  historyStore.ts  queueStore.ts  settingsStore.ts
src/styles/: globals.css
src/types/: file.ts
