[package]
name = "convertly"
version = "0.1.0"
description = "High-performance, privacy-first, multi-format file converter"
authors = ["you"]
edition = "2021"

[lib]
name = "convertly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "avif", "gif", "bmp", "tiff"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
webp = "0.3"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

