[package]
name = "convertly"
version = "0.1.0"
description = "High-performance, privacy-first, multi-format file converter"
authors = ["you"]
edition = "2021"

[lib]
name = "convertly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
devtools = ["tauri/devtools"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "avif", "gif", "bmp", "tiff", "dds", "exr", "ff", "hdr", "ico", "pnm", "qoi", "tga"] }
libheif-rs = { version = "2.1.0", default-features = false, features = ["embedded-libheif", "image", "v1_17"] }
jxl-oxide = "0.9"
resvg = "0.43"
rawloader = "0.37.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
webp = "0.3"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
